java-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-webapp
  template:
    metadata:
      labels:
        app: java-webapp
    spec:
      containers:
      - name: java-webapp
        image: your-java-webapp-image:latest
        ports:
        - containerPort: 8080
