java-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-webapp-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: java-webapp
